--- a/page/package.json
+++ b/page/package.json
@@ -18,11 +18,15 @@
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
+    "@angular/google-maps": "^16.2.12",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@capacitor/android": "5.3.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "^5.3.0",
+    "@capacitor/geolocation": "^5.0.6",
+    "@capacitor/google-maps": "^5.3.3",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
